<resources>
    <string name="app_name">TourPal</string>
    <string name="login_heading">LOGIN</string>
    <string name="email_id">Enter your email ID</string>
    <string name="password">Enter your password</string>
    <string name="login">Login!</string>
    <string name="forgot_password">   Forgot Password?</string>
    <string name="signup">New User? Sign Up!</string>
    <string name="login_using">Or Login Using</string>
    <string name="facebook_text">Login Using Facebook</string>
    <string name="gmai_login">Login Using Gmail</string>
    <string name="or_name">OR</string>
    <string name="signup_title">SIGN UP</string>
    <string name="enter_name">Enter your name</string>
    <string name="reenter_pwd">Re-enter password</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="welcome_text">Welcome,</string>
    <string name="confirm_text">Confirm</string>
    <string name="makeitinerary">Show Itinerary</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="verify">Verify</string>
    <string name="otp">Enter  OTP</string>
    <string name="cancel">Cancel</string>
    <string name="verification">Account Verification</string>
    <string name="facebook_app_id">1789031031147868</string>
    <string name="fb_login_protocol_scheme">fb1789031031147868</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="trouble_traveling">Have Trouble Traveling?</string>
    <string name="weather_condition">What is your preferred weather condition?</string>
    <string name="weather_hint">Eg-Hot,cold,rainy</string>
    <string name="distance_question">How far do you want to travel?</string>
    <string name="distance_hint">Enter the distance in kms</string>
    <string name="duration">Enter your duration of stay</string>
    <string name="enteredduration">Enter number of days</string>
    <string name="cbf_button">Help Me</string>
    <string name="where_question">Where Do You Want To Go?</string>
    <string name="destination_name">Enter Destination</string>
    <string name="or_login">Login Using</string>
    <string name="contacttitle">Contact Us</string>
    <string name="city_name">Enter city name</string>
    <string name="havetrouble">Have Trouble Traveling?</string>
    <string name="durationoftravel">Enter the amount of rainfall you want to expect(in mm)</string>
    <string name="help_me">Reveal Meaning</string>
    <string name="enteredcity">CITY NAME</string>
    <string name="highlights">City Highlights</string>
    <string name="placename">Place Name</string>
    <string name="enterverifcode">Enter Verification Code sent to your Phone No</string>
    <string name="phone_no">Enter Your Phone No.</string>
    <string name="num">Enter your number here</string>
    <string name="resettitle">Reset Password</string>
    <string name="enternew">Enter new password here</string>
    <string name="reentry">Confirm password</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_here">Click Here For Place Picker</string>
    <string name="enter_here">Enter your email ID here</string>
    <string name="enter_month">Enter your desired month of travel</string>
    <string name="click_blog">Click here to open blogs</string>
    <string name="click_chat">Click here to chat with users</string>
    <string name="click_chats">Click here to open chats</string>
    <string name="newpost_desc">Enter your description here</string>
    <string name="addpost">Add Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notif_text">Notification</string>
    <string name="bottom_account">Account</string>
    <string-array name="translate">
        <item>English</item>
        <item>Hindi</item>
        <item>Kannada</item>
        <item>Telugu</item>
        <item>Tamil</item>
        <item>Marathi</item>
        <item>Bengali</item>
        <item>Malayalam</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="based_on">You may also want to visit:</string>
    <string name="still_having_trouble">Still having trouble? Go here</string>
    <string name="title">(Android WebSockets Chat App)</string>
    <string name="author_name">By Ravi Tamada</string>
    <string name="author_url">www.androidhive.info</string>
    <string name="btn_join">JOIN</string>
    <string name="btn_send">Send</string>
</resources>
