<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quicktitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:text="@string/havetrouble"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/weather_condition"
            android:paddingTop="30dp"
            android:textSize="18sp"
            android:textAlignment="viewStart" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/weatherSeek"
            android:max="45" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/durationoftravel"
            android:paddingTop="30dp"
            android:textSize="18sp"
            android:textAlignment="viewStart" />

        <SeekBar
            android:id="@+id/rainfallSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="600"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/month_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_month"
            android:inputType="number" />

        <Button
            android:id="@+id/helpmeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round"
            android:text="@string/cbf_button"
            android:textColor="@color/White" />
    </LinearLayout>


</LinearLayout>