<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.shesha.tourpal.ResetPassword">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resettitle"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/newpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enternew"
        android:inputType="textPassword"
        android:paddingTop="30dp" />

    <EditText
        android:id="@+id/newpwdsecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reentry"
        android:inputType="textPassword"
        android:paddingTop="30dp" />

    <Button
        android:id="@+id/resetBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/round"
        android:text="@string/resettitle"
        android:textColor="@color/White" />

</LinearLayout>
