<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/citytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/enteredcity"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        app:srcCompat="@mipmap/ic_launcher" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlights"
        android:textSize="18sp"
        android:layout_marginTop="30dp"

        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/citydescription"
        android:text="Description"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/makeitinerary"
        android:background="@drawable/round"
        android:textColor="@color/White"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:id="@+id/createItineraryID"/>


</LinearLayout>